# tiny-invoker

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/baseline/: qwen2-1.5b.jsonl  qwen2.jsonl
benchmarks/optimized/: qwen2-float32-activations.jsonl  qwen2-kv-dynamic.jsonl  qwen2-p2.jsonl
docs/: transformer.md
src/tiny_invoker/: __init__.py  __main__.py  cli.py  demo.py  engine.py  gpt_neo.py  hf.py  interfaces.py  model.py  qwen2.py  sampler.py  server.py  tokenizer.py  transformer.py  weights.py
tests/: test_cli.py  test_engine.py  test_gpt_neo.py  test_hf.py  test_qwen2.py  test_sampler.py  test_server.py  test_tokenizer.py  test_transformer.py  test_weights.py
