[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-invoker"
version = "0.1.0"
description = "A learning-oriented tiny model inference engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tiny-invoker = "tiny_invoker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
