[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-invoker"
version = "0.1.0"
description = "A learning-oriented tiny model inference engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tokenizers>=0.22",
]

[project.optional-dependencies]
runtime = [
    "numpy>=2",
]
weights = [
    "numpy>=2",
    "safetensors>=0.4",
    "torch>=2.6",
]
compare = [
    "numpy>=2",
    "safetensors>=0.4",
    "torch>=2.6",
    "transformers>=4.40,<6",
]

[project.scripts]
tiny-invoker = "tiny_invoker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
